--- a/index1.html
+++ b/index1.html
@@ -112,7 +112,7 @@
 							<li class="active"><a href="index.html" role="button" aria-haspopup="true" aria-expanded="false">Home</a></li>
 							<li><a title="About Us" href="about.html">About Us</a></li>
 							<li><a title="Rooms" href="rooms.html">Our Rooms</a></li>
-							<li><a title="Amenities" href="amenities.html">Amenities</a></li>
+							<li><a title="Amenities" href="amenities.html">near by places </a></li>
 							<li><a title="Restaurant" href="restaurant.html">Restaurant</a></li>
 							<li><a title="Gallery" href="gallery.html">Gallery</a></li>
 							<li><a title="Contact" href="contact-us.html">Contact</a></li>
