--- a/restaurant.html
+++ b/restaurant.html
@@ -67,36 +67,38 @@
 	</div--><!-- Loader /- -->
 	
 	<!-- Header -->
-	<header class="header-section container-fluid no-padding">
-		<!-- Top Header -->
-		<div class="top-header container-fluid no-padding">
+	<header class="header-section header-section-1 container-fluid no-padding">
+		<!-- Top Header 1 -->
+		<div class="top-header top-header-1 container-fluid no-padding">
 			<!-- Container -->
 			<div class="container">
-				<!-- Social -->
-				<div class="col-md-7 col-sm-6 col-xs-12 info">
-						<p><i class="icon icon-Phone2"></i><a href="tel:(+01)1234567890" title="Phone" class="phone">+91 84491 79531</a></p>
+				<div class="row">
+					<!-- Info -->
+					<div class="col-md-7 col-sm-6 col-xs-12 info">
+						<p><i class="icon icon-Phone2"></i><a href="tel:+91 84491 79531" title="Phone" class="phone">+91 84491 79531</a></p>
 						<p><i class="icon icon-Pointer"></i>Haridwar, Uttarakhand</p>
 					</div>
-				<div class="col-md-5 col-sm-6 col-xs-12 header-social"> 
-					<h5>Follow Us</h5>
-					<ul>
-						<li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-						<!-- <li><a href="#" title="Google"><i class="fa fa-google-plus"></i></a></li> -->
-						<!-- <li><a href="#" title="linkedin"><i class="fa fa-linkedin"></i></a></li> -->
-						<!-- <li><a href="#" title="Tripadvisor"><i class="fa fa-tripadvisor"></i></a></li> -->
-					</ul>
-				</div><!-- Social /- -->
+					<!-- Info /- -->
+					<!-- Social -->
+					<div class="col-md-5 col-sm-6 col-xs-12 header-social"> 
+						<ul>
+							<li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="#" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+							<!-- <li><a href="#" title="linkedin"><i class="fa fa-linkedin"></i></a></li> -->
+							<!-- <li><a href="#" title="Skype"><i class="fa fa-skype"></i></a></li> -->
+						</ul>
+					</div><!-- Social /- -->
+				</div>
 			</div><!-- Container /- -->
-		</div><!-- Top Header /- -->
+		</div><!-- Top Header 1 /- -->
 		
 		<!-- Menu Block -->
 		<div class="menu-block container-fluid">
 			<!-- Container -->
 			<div class="container">
-				<!-- Navigation -->
-				<nav class="navbar ow-navigation">
+				<!-- nav -->
+				<nav class="navbar navbar-default ow-navigation">
 					<div class="navbar-header">
 						<button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
 							<span class="sr-only">Toggle navigation</span>
@@ -104,23 +106,62 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a title="Logo" href="index.html" class="navbar-brand"><img src="img/fresco-logo.jpeg"></a>
-						<!-- <h1 style="font-weight: bold;">The Fresco Resort</h1> -->
+						<a title="Logo" href="index.html" class="navbar-brand"><img src="img/fresco-resort-logo-main.png"></a>
+						<!-- <h1 style="font-weight: bold; color: #fff; margin-top: 35px;">The Fresco Resort</h1> -->
+						<!-- <a href="index.html"><img src="img/fresco-resort-logo-main.png" alt="logo" class="img-nav"></a> -->
 					</div>
-					<div class="navbar-collapse collapse" id="navbar">
-						<ul class="nav navbar-nav">
-							<li><a href="index1.html" role="button">Home</a></li>
+					<!-- Menu Icon -->
+					<!-- <div class="menu-icon">
+						<div class="search">	
+							<a href="#" id="search" title="Search"><i class="icon icon-Search"></i></a>
+						</div>
+					</div> -->
+					<!-- Menu Icon /- -->
+					<div class="navbar-collapse collapse navbar-right" id="navbar">
+						<ul class="nav navbar-nav header2">
+							<li class="dropdown active">
+								<a href="index.html" title="Home" class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">Home</a>
+								<!-- <i class="ddl-switch fa fa-angle-down"></i>
+								<ul class="dropdown-menu">	
+									<li><a href="index.html" title="HomePage 1">HomePage 1</a></li>
+									<li><a href="index2.html" title="HomePage 2">HomePage 2</a></li>
+								</ul> -->
+							</li>
 							<li><a title="About Us" href="about.html">About Us</a></li>
 							<li><a title="Rooms" href="rooms.html">Our Rooms</a></li>
-							<li><a title="Amenities" href="amenities.html">Amenities</a></li>
-							<li class="active"><a title="Restaurant" href="restaurant.html">Restaurant</a></li>
+							<li><a title="Restaurant" href="restaurant.html">Restaurant</a></li>
 							<li><a title="Gallery" href="gallery.html">Gallery</a></li>
+							<li><a title="Amenities" href="amenities.html">near by places </a></li>
+							<!-- <li class="dropdown">
+								<a href="#" title="Gallery" class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">Gallery</a>
+								<i class="ddl-switch fa fa-angle-down"></i>
+								<ul class="dropdown-menu">	
+									<li><a title="Gallery Single" href="gallery-single.html">Gallery Single</a></li>
+								</ul>
+							</li> -->
+							<!-- <li class="dropdown">
+								<a aria-expanded="false" aria-haspopup="true" role="button" class="dropdown-toggle" title="Pages" href="blog.html">Pages</a>
+								<i class="ddl-switch fa fa-angle-down"></i>
+								<ul class="dropdown-menu">	
+									<li><a title="Blog" href="blog.html">Blog</a></li>
+									<li><a title="Blog Post" href="blog-post.html">Blog Post</a></li>
+									<li><a title="404" href="404.html">404</a></li>
+								</ul>
+							</li> -->
 							<li><a title="Contact" href="contact-us.html">Contact</a></li>
-							<li><button class="btn"><a href="#" class="book-now-btn">Book Now</a></button></li>
-						</ul>						
-					</div>
-				</nav><!-- Navigation -->
-			</div>
+							<li><button class="btn"><a href="contact-us.html" class="book-now-btn">Book Now</a></button></li>
+							<!-- <li><button class="btn"><a href="#" style="color: black; text-decoration: none; font-weight: bold;">Book Now</a></button></li> -->
+						</ul>
+						
+					</div><!--/.nav-collapse -->
+				</nav><!-- nav /- -->
+				<!-- Search Box -->
+				<!-- <div class="search-box">
+					<span><i class="icon_close"></i></span>
+					<form><input class="form-control" placeholder="Enter a keyword and press enter..." type="text"></form>
+				</div> -->
+				<!-- Search Box /- -->
+			</div><!-- Container /- -->
 		</div><!-- Menu Block /- -->
 	</header><!-- Header /- -->
 	
