--- a/Standard-room.html
+++ b/Standard-room.html
@@ -171,11 +171,11 @@
 		<!-- Page Banner -->
 		<div class="page-banner blog-banner container-fluid no-padding">
 			<div class="banner-content">
-				<h3>Deluxe Room</h3>
+				<h3>Standard Rooms </h3>
 				<ol class="breadcrumb">
 					<li><a href="index.html" title="Home">Home</a></li>							
 					<li><a href="#" title="Gallery">Rooms</a></li>							
-					<li class="active">Deluxe Room</li>
+					<li class="active">Standard Rooms </li>
 				</ol>
 			</div>
 		</div><!-- Page Banner /- -->
@@ -192,12 +192,13 @@
 		</div>
 		<div class="col-md-8 col-sm-7 col-xs-7 wc-max-content">
 			<div class="About-heading">
-			<h3>Deluxe Room</h3>
+			<h3>Standard Rooms </h3>
 			<!-- <h4>Discover Hotel Fresco in Haridwar
 			</h4> -->
 		
 
-			<p>Our Deluxe Rooms offer a perfect blend of comfort and tranquility with a cozy double bed and picturesque garden views. Each room is equipped with modern amenities including air conditioning, an ensuite bathroom, flat-screen TV, and complimentary WiFi. Whether you're traveling solo or with family, choose the number of rooms you need and reserve effortlessly to experience a peaceful stay amidst nature's beauty at Fresco Hotel.
+			<p>Our Standard Room offers a comfortable retreat with modern amenities, perfect for both business and leisure travelers. Each room is elegantly furnished, providing a peaceful ambiance for a restful stay. Enjoy complimentary Wi-Fi, flat-screen TVs, and soothing décor that reflects the beauty of Haridwar's natural landscape. Whether you're here for a short visit or an extended stay, our Standard Rooms at Fresco Hotel ensure a pleasant and memorable experience.
+
 
 			</p>
 			<a href="#" class="learn-more" title="More About Us">Know More<i class="fa fa-caret-right"></i></a>
