--- a/index.html
+++ b/index.html
@@ -126,8 +126,15 @@
 								</ul> -->
 							</li>
 							<li><a title="About Us" href="about.html">About Us</a></li>
-							<li><a title="Rooms" href="rooms.html">Our Rooms</a></li>
-							<li><a title="Restaurant" href="restaurant.html">Restaurant</a></li>
+							<li><a title="Rooms" href="rooms.html">Our Rooms</a>
+								
+								<ul>
+									<li><a href="deluxe-room.html">Deluxe Room</a></li>
+									<li><a href="standard-room.html">Standard Room</a></li>
+								</ul>
+							</li>
+							<li><a title="Restaurant" href="restaurant.html">Restaurant</a>
+							</li>
 							<li><a title="Gallery" href="gallery.html">Gallery</a></li>
 								<li><a title="Amenities" href="amenities.html">near by places </a></li>
 							<!-- <li class="dropdown">
